[package]
name = "kanbanapp"
description = "Kanban app"
version = "0.1.0"
authors = ["Huy Tran <kingbazoka@gmail.com>"]

[dependencies]
web-view = { git = "https://github.com/huytd/web-view" }

[package.metadata.bundle]
name = "Kanban"
identifier = "com.huy.kanbanapp"
version = "1.0.0"
resources = []
copyright = "Copyright (c) Huy Tran 2018. All rights reserved."
short_description = "Kanban app"
long_description = "Kanban app"